buildblkz/yaml-2-cpy/unused/deploy/m-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: m
  name: m
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: port-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: m
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
